Added User and UserExpense models

--- a/Family budget/Family budget.csproj
+++ b/Family budget/Family budget.csproj
@@ -5,4 +5,9 @@
     <RootNamespace>Family_budget</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.2" />
+  </ItemGroup>
+
 </Project>
