Added EF configuration

--- a/Family budget/appsettings.json
+++ b/Family budget/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=EDS14\\SQLEXPRESS;Database=BudgetDB;Trusted_Connection=True;MultipleActiveResultSets=True;"
+},
   "Logging": {
     "LogLevel": {
       "Default": "Information",
